--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -4,11 +4,11 @@
   <artifactId>rest</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
-  <properties>
+<!--   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
+  </properties> -->
 
   <dependencies>
     <dependency>
@@ -74,6 +74,14 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M5</version>
       </plugin>
+      
+      <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
     </plugins>
   </build>
   
